# orlop

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  config.demo.yaml  config.example.yaml  config.local.yaml  go.mod  go.sum  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: go.yml  orlop-cli.yml  release.yml  shellcheck.yml  upgrade.yml
bench/: Cargo.toml
bench/src/: fixtures.rs  main.rs  metrics.rs  netstats.rs  workload.rs
bench/src/workloads/: cold_warm_cycle.rs  large_edit.rs  ls_large_dir.rs  mod.rs  random_read.rs  sequential_read.rs  small_edit.rs  stat_storm.rs
client/: api_version_test.go  client.go  client_test.go  fake.go  http.go
cmd/orlop-control/: agent_enroll_handlers.go  agent_enroll_handlers_test.go  api_token_expiry_test.go  api_token_handlers.go  api_token_handlers_test.go  api_version.go  api_version_test.go  ca_cmd.go  ca_cmd_test.go  ca_tenant_policy_test.go  cert_revocation_reconcile.go  cert_revocation_reconcile_test.go  control_mount_handlers.go  control_mount_handlers_test.go  control_mount_release_fence_test.go  control_usage_handlers_test.go  dashboard_handlers.go  dashboard_handlers_test.go  devauth_handlers.go  devauth_handlers_test.go  entity_handlers.go  entity_handlers_test.go  host_identity_handlers.go  host_identity_handlers_test.go  journal_handlers.go  (+27 more)
docker/: agent-entrypoint.sh  agent.Dockerfile  control.Dockerfile  mount.Dockerfile  server.Dockerfile
docs/: advanced-usage.md  agent-memory.md  audit-events.md  container-images.md  control-plane-runbook.md  control-plane.md  database-backends.md  design-auth.md  design-data-plane.md  design-identity.md  design.md  kubernetes.md  manual-bring-up.md  standalone-quickstart.md  upgrade-safety.md
scripts/: bench-compare.sh  demo.sh  pjdfstest-docker.sh  pjdfstest-rig.sh  pjdfstest.Dockerfile
src/: agents_md.rs  audit.rs  backend.rs  config.rs  daemon.rs  dev.rs  doctor.rs  enroll.rs  fs.rs  lease.rs  lib.rs  login.rs  main.rs  mount.rs  nfs.rs  policy.rs  store.rs  util.rs  write_handle.rs
tests/: cas_retry.rs  enroll_http.rs  fastcdc_parity.rs  journal_implicit_session.rs  lease_integration.rs  login_device_flow.rs  mount_daemon.rs  nfs_smoke_local.rs
(+244 files in other folders)
