[package]
name = "orlop-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "orlop-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
orlop = { path = ".." }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
